tests/pos/namespace/main.stk
import test

fun concat(a: Int, l: test.List[Int]): test.List[Int] = #Cons(a, l)

fun main =
  test.id[Int] 20
  test.double 10 p
