tests/neg/namespace-redefintion/main.stk
namespace test

fun concat(a: Int, l: test.List[Int]): test.List[Int] = #Cons(a, l)

fun main =
  test.double 10 p
